[caffe.topmonks.cz] Addd links and texts and social media metas

--- a/caffe.topmonks.cz/src/html/index.njk
+++ b/caffe.topmonks.cz/src/html/index.njk
@@ -363,37 +363,37 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h4>What we do?</h4>
+          <h4>Co děláme?</h4>
           <nav>
             <ul>
-              <li><a href="https://www.topmonks.com/">Software development</a></li>
+              <li><a href="https://www.topmonks.cz/">Software development</a></li>
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
-              <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+              <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
+              <li><a href="https://www.hlidacshopu.cz/">Hlídač shopů</a></li>
             </ul>
           </nav>
         </div>
-        <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h4>Looking for something?</h4>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <h4>Hledáte něco?</h4>
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
-              <li><a href="https://www.topmonks.com/about-us/">About TopMonks</a></li>
-              <li><a href="https://www.topmonks.com/meet-us/">Meet Us</a></li>
+              <li><a href="https://www.topmonks.cz/">TopMonks</a></li>
+              <li><a href="https://www.topmonks.cz/tym/">Tým</a></li>
+              <li><a href="https://www.topmonks.cz/potkejte-nas/">Potkejte nás</a></li>
               <li><a href="https://blog.topmonks.com/">Blog</a></li>
-              <li><a href="https://www.topmonks.com/jobs/">Jobs</a></li>
-              <li><a href="https://www.topmonks.com/contact/">Contacts</a></li>
+              <li><a href="https://www.topmonks.cz/volna-mista/">Volná místa</a></li>
+              <li><a href="https://www.topmonks.cz/kontakt/">Kontakt</a></li>
             </ul>
           </nav>
         </div>
         <div
           class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h4>About us</h4>
-          <p class="tm-text--margin-top">We are your software development partners, experienced with both startup and
-            corporate environment.</p>
+          <h4>O nás</h4>
+          <p class="tm-text--margin-top">Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
           <div itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"><span
               itemprop="legalName">TopMonks s.r.o.</span>
-            <div><a href="mailto:info@topmonks.com" itemprop="email">info@topmonks.com</a></div>
+            <div><a href="mailto:info&#64;topmonks.com" itemprop="email">info@topmonks.com</a></div>
           </div>
         </div>
       </div>
