--- a/www.topmonks.cz/src/html/shared/footer.njk
+++ b/www.topmonks.cz/src/html/shared/footer.njk
@@ -12,6 +12,7 @@
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
               <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
+              <li><a href="https://www.hlidacshopu.cz/">Hlídač shopů</a></li>
             </ul>
           </nav>
         </div>
