Day change - Thursday to Tuesday

--- a/caffe.topmonks.cz/src/html/index.njk
+++ b/caffe.topmonks.cz/src/html/index.njk
@@ -20,7 +20,7 @@
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <meta name="theme-color" content="#F06B4F">
   <meta name="description"
-        content="Teach or die, learn or die. Každý první čtvrtek v měsíci se setkáváme, přednášíme a diskutujeme o tématech, která nás baví.">
+        content="Teach or die, learn or die. Každé první úterý v měsíci se setkáváme, přednášíme a diskutujeme o tématech, která nás baví.">
   <link rel="canonical" href="https://caffe.topmonks.cz/">
   <meta name="twitter:site" content="@topmonks">
   <meta property="og:type" content="website">
@@ -168,7 +168,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h1>TopMonks Caffè</h1>
-          <p>Přednášky a diskuze každý první čtvrtek v&nbsp;měsíci se zajímavými
+          <p>Přednášky a diskuze každé první úterý v&nbsp;měsíci se zajímavými
             lidmi a o&nbsp;tématech, která nás&nbsp;baví.
             <br> Přihlaš se přes stránky <a class="link" href="http://meetu.ps/c/2GNS0/cSTNb/d">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
