[caffe.topmonks.cz] Fixes

--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -200,7 +200,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h1>TopMonks Caffè</h1>
-          <p>Přednášky a diskuze každý první čtvrtek v&nbsp;měsíci se zajímavými
+          <p>Přednášky a diskuze každé první úterý v&nbsp;měsíci se zajímavými
             lidmi o&nbsp;tématech, která nás&nbsp;baví.
             <br>Sledujte další události na <a class="link" href="http://meetu.ps/c/2GNS0/cSTNb/d">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -209,7 +209,7 @@
                    width="95px" height="30px" viewBox="0 0 5573.111 1990.154"
                    enable-background="new 0 0 5573.111 1990.154"
                    xml:space="preserve">
-                <title>[logo] Meet Up</title>
+                <title>Meetup</title>
 
                 <path fill="#F64060" d="M3283.748,1072.614c-7.664,11.584-12.557,19.528-17.893,27.18
 	c-49.844,71.39-105.776,136.571-182.021,181.676c-102.199,60.419-212.97,85.341-328.428,60.315
