--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -24,7 +24,8 @@
   <meta name="twitter:site" content="@topmonks">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://caffe.topmonks.cz/">
-  <meta name="twitter:image" property="og:image" content="https://files.slack.com/files-pri/T03R38ACE-F010FTMNACR/banner-socialni-site-caffe.png">
+  <meta name="twitter:image" property="og:image"
+        content="https://files.slack.com/files-pri/T03R38ACE-F010FTMNACR/banner-socialni-site-caffe.png">
 
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -44,21 +45,26 @@
       width: 100%;
       height: auto;
     }
+
     [style*="--aspect-ratio"] > :first-child {
       width: 100%;
     }
+
     [style*="--aspect-ratio"] > img {
       height: auto;
     }
+
     @supports (--custom:property) {
       [style*="--aspect-ratio"] {
         position: relative;
       }
+
       [style*="--aspect-ratio"]::before {
         content: "";
         display: block;
         padding-bottom: calc(100% / (var(--aspect-ratio)));
       }
+
       [style*="--aspect-ratio"] > :first-child {
         position: absolute;
         top: 0;
@@ -298,14 +304,175 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Živé vysílání</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4" style="display: flex;flex-flow: column;">
+          <a href="https://www.youtube.com/channel/UCYRTpQr7XJ4dCyo8vCRqp9Q/live">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 733.36536 340.15732"
+              xml:space="preserve"
+              style="max-width: 324px"
+              version="1.1">
+              <title>Youtube</title>
+              <defs
+                id="defs6">
+                <clipPath
+                  id="clipPath18"
+                  clipPathUnits="userSpaceOnUse">
+                  <path
+                    id="path16"
+                    d="M 0,255.118 H 550.024 V 0 H 0 Z"/>
+                </clipPath>
+              </defs>
+              <g
+                transform="matrix(1.3333333,0,0,-1.3333333,0,340.15733)"
+                id="g10">
+                <g
+                  id="g12">
+                  <g
+                    clip-path="url(#clipPath18)"
+                    id="g14">
+                    <g
+                      transform="translate(274.351,101.0558)"
+                      id="g20">
+                      <path
+                        id="path22"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 c 0.665,1.736 0.999,4.574 0.999,8.513 v 16.594 c 0,3.822 -0.334,6.616 -0.999,8.383 -0.667,1.766 -1.84,2.65 -3.519,2.65 -1.622,0 -2.766,-0.884 -3.431,-2.65 -0.667,-1.767 -0.999,-4.561 -0.999,-8.383 V 8.513 c 0,-3.939 0.317,-6.777 0.955,-8.513 0.637,-1.738 1.795,-2.606 3.475,-2.606 1.679,0 2.852,0.868 3.519,2.606 m -13.466,-8.341 c -2.404,1.62 -4.113,4.141 -5.125,7.559 -1.014,3.416 -1.521,7.963 -1.521,13.639 v 7.732 c 0,5.734 0.578,10.339 1.738,13.813 1.157,3.475 2.967,6.009 5.429,7.602 2.461,1.592 5.691,2.389 9.687,2.389 3.938,0 7.094,-0.811 9.469,-2.433 2.375,-1.621 4.112,-4.156 5.213,-7.601 1.099,-3.446 1.651,-8.036 1.651,-13.77 v -7.732 c 0,-5.676 -0.536,-10.238 -1.607,-13.683 -1.072,-3.446 -2.81,-5.966 -5.213,-7.558 -2.404,-1.593 -5.662,-2.389 -9.774,-2.389 -4.228,0 -7.544,0.811 -9.947,2.432"/>
+                    </g>
+                    <g
+                      transform="translate(446.9258,136.2003)"
+                      id="g24">
+                      <path
+                        id="path26"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 c -0.607,-0.753 -1.014,-1.984 -1.216,-3.692 -0.204,-1.709 -0.304,-4.3 -0.304,-7.775 v -3.823 h 8.774 v 3.823 c 0,3.416 -0.116,6.008 -0.347,7.775 C 6.675,-1.926 6.256,-0.681 5.647,0.043 5.039,0.768 4.098,1.13 2.824,1.13 1.549,1.13 0.608,0.752 0,0 m -1.52,-22.414 v -2.693 c 0,-3.418 0.1,-5.981 0.304,-7.689 0.202,-1.709 0.621,-2.954 1.26,-3.736 0.637,-0.781 1.62,-1.173 2.954,-1.173 1.794,0 3.025,0.695 3.691,2.086 0.665,1.39 1.028,3.706 1.086,6.95 l 10.339,-0.608 c 0.058,-0.465 0.087,-1.102 0.087,-1.911 0,-4.924 -1.347,-8.602 -4.04,-11.035 -2.692,-2.431 -6.502,-3.648 -11.424,-3.648 -5.907,0 -10.049,1.852 -12.424,5.56 -2.376,3.706 -3.562,9.44 -3.562,17.202 v 9.296 c 0,7.993 1.23,13.827 3.693,17.506 2.461,3.677 6.675,5.516 12.641,5.516 4.111,0 7.268,-0.753 9.469,-2.258 2.2,-1.507 3.75,-3.853 4.648,-7.037 0.898,-3.186 1.347,-7.589 1.347,-13.206 v -9.122 z"/>
+                    </g>
+                    <g
+                      transform="translate(231.6914,114.7833)"
+                      id="g28">
+                      <path
+                        id="path30"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="M 0,0 -13.64,49.26 H -1.738 L 3.04,26.932 C 4.257,21.429 5.154,16.738 5.733,12.858 h 0.348 c 0.405,2.78 1.303,7.442 2.693,13.987 L 13.726,49.26 H 25.628 L 11.815,0 V -23.632 H 0 Z"/>
+                    </g>
+                    <g
+                      transform="translate(326.1357,144.4068)"
+                      id="g32">
+                      <path
+                        id="path34"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 v -53.255 h -9.383 l -1.043,6.515 h -0.26 c -2.549,-4.923 -6.372,-7.384 -11.468,-7.384 -3.533,0 -6.139,1.158 -7.819,3.475 -1.68,2.316 -2.519,5.937 -2.519,10.859 V 0 h 11.989 v -39.094 c 0,-2.376 0.261,-4.07 0.782,-5.082 0.521,-1.015 1.389,-1.521 2.606,-1.521 1.043,0 2.042,0.318 2.997,0.956 0.956,0.637 1.665,1.447 2.129,2.432 l 0,42.309 z"/>
+                    </g>
+                    <g
+                      transform="translate(387.6318,144.4068)"
+                      id="g36">
+                      <path
+                        id="path38"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 v -53.255 h -9.383 l -1.043,6.515 h -0.26 c -2.55,-4.923 -6.372,-7.384 -11.468,-7.384 -3.533,0 -6.139,1.158 -7.819,3.475 -1.68,2.316 -2.519,5.937 -2.519,10.859 V 0 h 11.989 v -39.094 c 0,-2.376 0.26,-4.07 0.781,-5.082 0.522,-1.015 1.39,-1.521 2.607,-1.521 1.043,0 2.042,0.318 2.997,0.956 0.956,0.637 1.664,1.447 2.129,2.432 l 0,42.309 z"/>
+                    </g>
+                    <g
+                      transform="translate(358.7138,154.3981)"
+                      id="g40">
+                      <path
+                        id="path42"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="M 0,0 H -11.902 V -63.247 H -23.63 V 0 H -35.532 V 9.644 H 0 Z"/>
+                    </g>
+                    <g
+                      transform="translate(416.3213,114.171)"
+                      id="g44">
+                      <path
+                        id="path46"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 c 0,-3.881 -0.16,-6.922 -0.479,-9.122 -0.318,-2.202 -0.854,-3.766 -1.607,-4.691 -0.753,-0.927 -1.768,-1.39 -3.04,-1.39 -0.985,0 -1.897,0.23 -2.736,0.695 -0.841,0.463 -1.521,1.157 -2.042,2.085 V 17.81 c 0.404,1.447 1.099,2.635 2.085,3.562 0.984,0.925 2.054,1.39 3.214,1.39 1.216,0 2.157,-0.478 2.824,-1.433 0.665,-0.956 1.129,-2.563 1.389,-4.823 C -0.131,14.248 0,11.034 0,6.864 Z m 10.989,21.723 c -0.724,3.358 -1.897,5.791 -3.518,7.298 -1.622,1.504 -3.853,2.258 -6.69,2.258 -2.201,0 -4.257,-0.623 -6.168,-1.868 -1.911,-1.245 -3.388,-2.882 -4.43,-4.909 h -0.088 l 10e-4,28.062 h -11.555 v -75.583 h 9.903 l 1.217,5.039 h 0.261 c 0.926,-1.795 2.315,-3.214 4.17,-4.257 1.852,-1.042 3.909,-1.564 6.169,-1.564 4.052,0 7.036,1.868 8.947,5.604 1.911,3.736 2.867,9.57 2.867,17.506 v 8.426 c 0,5.965 -0.362,10.628 -1.086,13.988"/>
+                    </g>
+                    <g
+                      transform="translate(203.4961,156.7999)"
+                      id="g48">
+                      <path
+                        id="path50"
+                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="m 0,0 c -1.397,5.227 -5.514,9.343 -10.741,10.74 -9.474,2.539 -47.463,2.539 -47.463,2.539 0,0 -37.989,0 -47.463,-2.539 -5.227,-1.397 -9.344,-5.513 -10.741,-10.74 -2.538,-9.474 -2.538,-29.241 -2.538,-29.241 0,0 0,-19.767 2.538,-29.24 1.397,-5.227 5.514,-9.344 10.741,-10.741 9.474,-2.539 47.463,-2.539 47.463,-2.539 0,0 37.989,0 47.463,2.539 5.227,1.397 9.344,5.514 10.741,10.741 2.538,9.473 2.538,29.24 2.538,29.24 0,0 0,19.767 -2.538,29.241"/>
+                    </g>
+                    <g
+                      transform="translate(133.1435,109.336)"
+                      id="g52">
+                      <path
+                        id="path54"
+                        style="fill:#ca4aaf;fill-opacity:1;fill-rule:nonzero;stroke:none"
+                        d="M 0,0 V 36.446 L 31.562,18.223 Z"/>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </svg>
+          </a>
+          <a href="https://www.facebook.com/topmonks">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 1012.8 354" style="padding: 24px 52px;max-width:220px;enable-background:new 0 0 1012.8 354;" xml:space="preserve">
+              <style type="text/css">
+                .st0 {
+                  fill: #FFFFFF;
+                }
+              </style>
+              <title>Facebook Live</title>
+              <g>
+                <g>
+                  <path class="st0" d="M993.3,0H399.9c-10.8,0-19.5,8.7-19.5,19.5V334c0,10.8,8.7,19.5,19.5,19.5h593.4c10.8,0,19.5-8.7,19.5-19.5
+			V19.5C1012.8,8.7,1004.1,0,993.3,0z M574.8,251.6h-95.4V101.9h26.8v126.3h68.7V251.6z M630.4,251.6h-26.8V101.9h26.8V251.6z
+			 M739.4,251.6h-30.8l-52.3-149.7h29.6l37.7,118.5h1.8l37.3-118.5h28.5L739.4,251.6z M913.9,125h-70.1v39.7H910v21.8h-66.3v41.9
+			h70.1v23.1H817V101.9h96.9V125z"/>
+                </g>
+                <g>
+                  <path class="st0" d="M353.6,177c0-97.7-79.2-176.8-176.8-176.8S0,79.4,0,177c0,88.3,64.7,161.5,149.3,174.7V228.1h-45.2V177h45.2
+			l0-39c0-44.3,26.2-68.9,66.6-68.9c19.3,0,39.4,3.7,39.4,3.7v43.2h-22.1c-22,0-29,13.8-29,27.7l0,33.2h49.1l-7.9,51.1h-41.3v123.6
+			C288.9,338.5,353.6,265.3,353.6,177z"/>
+                </g>
+              </g>
+</svg>
+          </a>
+          <a href="https://twitch.tv/topmonks">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 8192 2500" style="padding: 24px 52px;max-width:220px;enable-background:new 0 0 8192 2500;" xml:space="preserve">
+<style type="text/css">
+  .st0 {
+    fill: #FFFFFF;
+  }
+</style>
+              <title>Twitch</title>
+              <g>
+                <g id="Layer_1-2">
+                  <polygon class="st0" points="596,840 595.8,319.1 0,319.1 0,1883 297.9,2180.9 1117,2181 1117,1585 596,1585 596,1436 1117,1436
+			1117,840 		"/>
+                  <polygon class="st0" points="2755,840 2755,1585 2606,1585 2606,840 2011,840 2011,1585 1862,1585 1862,840 1266,840 1266,1883
+			1563.9,2180.9 3351,2181 3351,840 		"/>
+                  <polygon class="st0" points="3500,840 4096,840 4096,2180.9 3500.2,2180.9 		"/>
+                  <polygon class="st0" points="3500.2,319.1 4096,319.1 4096,692 3500,692 		"/>
+                  <polygon class="st0" points="5809,840 5511,1138.3 5511,1883 5808.9,2180.9 6703,2181 6703,1585 6107,1585 6107,1436 6703,1436
+			6703,840 		"/>
+                  <polygon class="st0" points="7894,840 7448,840 7448,319 6852,319 6852,2181 7447,2181 7447,1436 7596,1436 7596,2181
+			8192,2180.9 8192,1138.3 		"/>
+                  <polygon class="st0" points="4841,840 4840.7,319.1 4245,319 4245,1883 4542.8,2180.9 5362,2180.9 5362,1585.1 4841,1585
+			4841,1436 5362,1436 5362,840 		"/>
+                </g>
+              </g>
+</svg>
+          </a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
           <div style="--aspect-ratio: 16/9;">
             <iframe class="restream-widget"
                     src="https://embed.restream.io/player/index.html?token=09179ee482b3ba52d51058c57d7d07cb" width="960"
                     height="576" frameborder="0" allowfullscreen></iframe>
           </div>
           <p>Máte dotaz na řečníky?
-            <a href="https://app.sli.do/event/ossrhhtg" style="text-decoration: underline">Zeptejte se přes Slido</a>.</p>
-            Pokud máte aplikaci Slido již nainstalovanou, použijte Event code: #<strong>16498</strong>.
+            <a href="https://app.sli.do/event/ossrhhtg" style="text-decoration: underline">Zeptejte se přes Slido</a>.
+          </p>
+          Pokud máte aplikaci Slido již nainstalovanou, použijte Event code: #<strong>16498</strong>.
         </div>
       </div>
     </div>
@@ -378,7 +545,8 @@
         <div
           class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <h4>O nás</h4>
-          <p class="tm-text--margin-top">Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
+          <p class="tm-text--margin-top">Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s
+            korporátním prostředím.</p>
           <div itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"><span
               itemprop="legalName">TopMonks s.r.o.</span>
             <div><a href="mailto:info&#64;topmonks.com" itemprop="email">info@topmonks.com</a></div>
