[caffe,topmonks.com] Fixed logos rendering in chrome

--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -311,114 +311,32 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Živé vysílání</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet" style="display: flex;flex-flow: column;align-items: center;">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet" style="display: flex;flex-flow: column;">
           <a href="https://www.youtube.com/channel/UCYRTpQr7XJ4dCyo8vCRqp9Q/live">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 733.36536 340.15732"
-              xml:space="preserve"
-              style="max-width: 324px"
-              version="1.1">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 733.36536 340.15732">
               <title>Youtube</title>
-              <defs
-                id="defs6">
-                <clipPath
-                  id="clipPath18"
-                  clipPathUnits="userSpaceOnUse">
-                  <path
-                    id="path16"
-                    d="M 0,255.118 H 550.024 V 0 H 0 Z"/>
+              <defs>
+                <clipPath id="A">
+                  <path d="M0 255.118h550.024V0H0z"/>
                 </clipPath>
               </defs>
-              <g
-                transform="matrix(1.3333333,0,0,-1.3333333,0,340.15733)"
-                id="g10">
-                <g
-                  id="g12">
-                  <g
-                    clip-path="url(#clipPath18)"
-                    id="g14">
-                    <g
-                      transform="translate(274.351,101.0558)"
-                      id="g20">
-                      <path
-                        id="path22"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 c 0.665,1.736 0.999,4.574 0.999,8.513 v 16.594 c 0,3.822 -0.334,6.616 -0.999,8.383 -0.667,1.766 -1.84,2.65 -3.519,2.65 -1.622,0 -2.766,-0.884 -3.431,-2.65 -0.667,-1.767 -0.999,-4.561 -0.999,-8.383 V 8.513 c 0,-3.939 0.317,-6.777 0.955,-8.513 0.637,-1.738 1.795,-2.606 3.475,-2.606 1.679,0 2.852,0.868 3.519,2.606 m -13.466,-8.341 c -2.404,1.62 -4.113,4.141 -5.125,7.559 -1.014,3.416 -1.521,7.963 -1.521,13.639 v 7.732 c 0,5.734 0.578,10.339 1.738,13.813 1.157,3.475 2.967,6.009 5.429,7.602 2.461,1.592 5.691,2.389 9.687,2.389 3.938,0 7.094,-0.811 9.469,-2.433 2.375,-1.621 4.112,-4.156 5.213,-7.601 1.099,-3.446 1.651,-8.036 1.651,-13.77 v -7.732 c 0,-5.676 -0.536,-10.238 -1.607,-13.683 -1.072,-3.446 -2.81,-5.966 -5.213,-7.558 -2.404,-1.593 -5.662,-2.389 -9.774,-2.389 -4.228,0 -7.544,0.811 -9.947,2.432"/>
-                    </g>
-                    <g
-                      transform="translate(446.9258,136.2003)"
-                      id="g24">
-                      <path
-                        id="path26"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 c -0.607,-0.753 -1.014,-1.984 -1.216,-3.692 -0.204,-1.709 -0.304,-4.3 -0.304,-7.775 v -3.823 h 8.774 v 3.823 c 0,3.416 -0.116,6.008 -0.347,7.775 C 6.675,-1.926 6.256,-0.681 5.647,0.043 5.039,0.768 4.098,1.13 2.824,1.13 1.549,1.13 0.608,0.752 0,0 m -1.52,-22.414 v -2.693 c 0,-3.418 0.1,-5.981 0.304,-7.689 0.202,-1.709 0.621,-2.954 1.26,-3.736 0.637,-0.781 1.62,-1.173 2.954,-1.173 1.794,0 3.025,0.695 3.691,2.086 0.665,1.39 1.028,3.706 1.086,6.95 l 10.339,-0.608 c 0.058,-0.465 0.087,-1.102 0.087,-1.911 0,-4.924 -1.347,-8.602 -4.04,-11.035 -2.692,-2.431 -6.502,-3.648 -11.424,-3.648 -5.907,0 -10.049,1.852 -12.424,5.56 -2.376,3.706 -3.562,9.44 -3.562,17.202 v 9.296 c 0,7.993 1.23,13.827 3.693,17.506 2.461,3.677 6.675,5.516 12.641,5.516 4.111,0 7.268,-0.753 9.469,-2.258 2.2,-1.507 3.75,-3.853 4.648,-7.037 0.898,-3.186 1.347,-7.589 1.347,-13.206 v -9.122 z"/>
-                    </g>
-                    <g
-                      transform="translate(231.6914,114.7833)"
-                      id="g28">
-                      <path
-                        id="path30"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="M 0,0 -13.64,49.26 H -1.738 L 3.04,26.932 C 4.257,21.429 5.154,16.738 5.733,12.858 h 0.348 c 0.405,2.78 1.303,7.442 2.693,13.987 L 13.726,49.26 H 25.628 L 11.815,0 V -23.632 H 0 Z"/>
-                    </g>
-                    <g
-                      transform="translate(326.1357,144.4068)"
-                      id="g32">
-                      <path
-                        id="path34"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 v -53.255 h -9.383 l -1.043,6.515 h -0.26 c -2.549,-4.923 -6.372,-7.384 -11.468,-7.384 -3.533,0 -6.139,1.158 -7.819,3.475 -1.68,2.316 -2.519,5.937 -2.519,10.859 V 0 h 11.989 v -39.094 c 0,-2.376 0.261,-4.07 0.782,-5.082 0.521,-1.015 1.389,-1.521 2.606,-1.521 1.043,0 2.042,0.318 2.997,0.956 0.956,0.637 1.665,1.447 2.129,2.432 l 0,42.309 z"/>
-                    </g>
-                    <g
-                      transform="translate(387.6318,144.4068)"
-                      id="g36">
-                      <path
-                        id="path38"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 v -53.255 h -9.383 l -1.043,6.515 h -0.26 c -2.55,-4.923 -6.372,-7.384 -11.468,-7.384 -3.533,0 -6.139,1.158 -7.819,3.475 -1.68,2.316 -2.519,5.937 -2.519,10.859 V 0 h 11.989 v -39.094 c 0,-2.376 0.26,-4.07 0.781,-5.082 0.522,-1.015 1.39,-1.521 2.607,-1.521 1.043,0 2.042,0.318 2.997,0.956 0.956,0.637 1.664,1.447 2.129,2.432 l 0,42.309 z"/>
-                    </g>
-                    <g
-                      transform="translate(358.7138,154.3981)"
-                      id="g40">
-                      <path
-                        id="path42"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="M 0,0 H -11.902 V -63.247 H -23.63 V 0 H -35.532 V 9.644 H 0 Z"/>
-                    </g>
-                    <g
-                      transform="translate(416.3213,114.171)"
-                      id="g44">
-                      <path
-                        id="path46"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 c 0,-3.881 -0.16,-6.922 -0.479,-9.122 -0.318,-2.202 -0.854,-3.766 -1.607,-4.691 -0.753,-0.927 -1.768,-1.39 -3.04,-1.39 -0.985,0 -1.897,0.23 -2.736,0.695 -0.841,0.463 -1.521,1.157 -2.042,2.085 V 17.81 c 0.404,1.447 1.099,2.635 2.085,3.562 0.984,0.925 2.054,1.39 3.214,1.39 1.216,0 2.157,-0.478 2.824,-1.433 0.665,-0.956 1.129,-2.563 1.389,-4.823 C -0.131,14.248 0,11.034 0,6.864 Z m 10.989,21.723 c -0.724,3.358 -1.897,5.791 -3.518,7.298 -1.622,1.504 -3.853,2.258 -6.69,2.258 -2.201,0 -4.257,-0.623 -6.168,-1.868 -1.911,-1.245 -3.388,-2.882 -4.43,-4.909 h -0.088 l 10e-4,28.062 h -11.555 v -75.583 h 9.903 l 1.217,5.039 h 0.261 c 0.926,-1.795 2.315,-3.214 4.17,-4.257 1.852,-1.042 3.909,-1.564 6.169,-1.564 4.052,0 7.036,1.868 8.947,5.604 1.911,3.736 2.867,9.57 2.867,17.506 v 8.426 c 0,5.965 -0.362,10.628 -1.086,13.988"/>
-                    </g>
-                    <g
-                      transform="translate(203.4961,156.7999)"
-                      id="g48">
-                      <path
-                        id="path50"
-                        style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="m 0,0 c -1.397,5.227 -5.514,9.343 -10.741,10.74 -9.474,2.539 -47.463,2.539 -47.463,2.539 0,0 -37.989,0 -47.463,-2.539 -5.227,-1.397 -9.344,-5.513 -10.741,-10.74 -2.538,-9.474 -2.538,-29.241 -2.538,-29.241 0,0 0,-19.767 2.538,-29.24 1.397,-5.227 5.514,-9.344 10.741,-10.741 9.474,-2.539 47.463,-2.539 47.463,-2.539 0,0 37.989,0 47.463,2.539 5.227,1.397 9.344,5.514 10.741,10.741 2.538,9.473 2.538,29.24 2.538,29.24 0,0 0,19.767 -2.538,29.241"/>
-                    </g>
-                    <g
-                      transform="translate(133.1435,109.336)"
-                      id="g52">
-                      <path
-                        id="path54"
-                        style="fill:#ca4aaf;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                        d="M 0,0 V 36.446 L 31.562,18.223 Z"/>
-                    </g>
-                  </g>
+              <g clip-path="url(#A)" transform="matrix(1.3333333 0 0 -1.3333333 0 340.15733000000006)">
+                <g fill="#fff">
+                  <path
+                    d="M274.35 101.0558c.665 1.736 1 4.574 1 8.513v16.594c0 3.822-.334 6.616-1 8.383s-1.84 2.65-3.52 2.65c-1.622 0-2.766-.884-3.43-2.65s-1-4.56-1-8.383v-16.594c0-3.94.317-6.777.955-8.513s1.795-2.606 3.475-2.606 2.852.868 3.52 2.606m-13.466-8.34c-2.404 1.62-4.113 4.14-5.125 7.56s-1.52 7.963-1.52 13.64v7.732c0 5.734.578 10.34 1.738 13.813s2.967 6 5.43 7.602 5.7 2.4 9.687 2.4c3.938 0 7.094-.8 9.47-2.433s4.112-4.156 5.213-7.6 1.65-8.036 1.65-13.77v-7.732c0-5.676-.536-10.238-1.607-13.683s-2.8-5.966-5.213-7.558-5.662-2.4-9.774-2.4c-4.228 0-7.544.8-9.947 2.432m186.0398 43.4815c-.607-.753-1.014-1.984-1.216-3.692s-.304-4.3-.304-7.775v-3.823h8.774v3.823l-.347 7.775c-.232 1.766-.65 3-1.26 3.735s-1.55 1.087-2.823 1.087-2.216-.378-2.824-1.13m-1.52-22.414v-2.693l.304-7.7c.202-1.7.62-2.954 1.26-3.736s1.62-1.173 2.954-1.173c1.794 0 3.025.695 3.7 2.086s1.028 3.706 1.086 6.95l10.34-.608c.058-.465.087-1.102.087-1.9 0-4.924-1.347-8.602-4.04-11.035s-6.502-3.648-11.424-3.648c-5.907 0-10.05 1.852-12.424 5.56s-3.562 9.44-3.562 17.202v9.296c0 7.993 1.23 13.827 3.693 17.506s6.675 5.516 12.64 5.516c4.1 0 7.268-.753 9.47-2.258s3.75-3.853 4.648-7.037 1.347-7.6 1.347-13.206v-9.122z"/>
+                  <path
+                    d="M231.6914 114.7833l-13.64 49.26h11.902l4.778-22.328c1.217-5.503 2.114-10.194 2.693-14.074h.348c.405 2.78 1.303 7.442 2.693 13.987l4.952 22.415h11.902l-13.813-49.26v-23.632h-11.815zm94.4443 29.6235v-53.255h-9.383l-1.043 6.515h-.26c-2.55-4.923-6.372-7.384-11.468-7.384-3.533 0-6.14 1.158-7.82 3.475s-2.52 5.937-2.52 10.86v39.8h12v-39.094c0-2.376.26-4.07.782-5.082s1.4-1.52 2.606-1.52c1.043 0 2.042.318 2.997.956s1.665 1.447 2.13 2.432v42.3zm61.496 0v-53.255h-9.383l-1.043 6.515h-.26c-2.55-4.923-6.372-7.384-11.468-7.384-3.533 0-6.14 1.158-7.82 3.475s-2.52 5.937-2.52 10.86v39.8h12v-39.094c0-2.376.26-4.07.78-5.082s1.4-1.52 2.607-1.52c1.043 0 2.042.318 2.997.956s1.664 1.447 2.13 2.432v42.3zm-28.918 9.9912h-11.902V91.15h-11.728v63.247h-11.902v9.644h35.532z"/>
+                  <path
+                    d="M416.3213 114.17c0-3.88-.16-6.922-.48-9.122s-.854-3.766-1.607-4.7-1.768-1.4-3.04-1.4c-.985 0-1.897.23-2.736.695s-1.52 1.157-2.042 2.085v30.233c.404 1.447 1.1 2.635 2.085 3.562s2.054 1.4 3.214 1.4c1.216 0 2.157-.478 2.824-1.433s1.13-2.563 1.4-4.823.392-5.472.392-9.642zm11 21.723c-.724 3.358-1.897 5.8-3.518 7.298s-3.853 2.258-6.7 2.258c-2.2 0-4.257-.623-6.168-1.868s-3.388-2.882-4.43-4.9h-.088l.001 28.062h-11.555v-75.58h9.903l1.217 5.04h.26c.926-1.795 2.315-3.214 4.17-4.257s3.9-1.564 6.17-1.564c4.052 0 7.036 1.868 8.947 5.604s2.867 9.57 2.867 17.506v8.426c0 5.965-.362 10.628-1.086 13.988M203.496 156.8c-1.397 5.227-5.514 9.343-10.74 10.74-9.474 2.54-47.463 2.54-47.463 2.54s-38 0-47.463-2.54c-5.227-1.397-9.344-5.513-10.74-10.74-2.538-9.474-2.538-29.24-2.538-29.24s0-19.767 2.538-29.24c1.397-5.227 5.514-9.344 10.74-10.74 9.474-2.54 47.463-2.54 47.463-2.54s38 0 47.463 2.54c5.227 1.397 9.344 5.514 10.74 10.74 2.538 9.473 2.538 29.24 2.538 29.24s0 19.767-2.538 29.24"/>
                 </g>
+                <path d="M133.1435 109.336v36.446l31.562-18.223z" fill="#ca4aaf"/>
               </g>
             </svg>
           </a>
           <a href="https://www.facebook.com/topmonks">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 1012.8 354" style="padding: 24px 52px;max-width:220px;enable-background:new 0 0 1012.8 354;" xml:space="preserve">
+                 viewBox="0 0 1012.8 354" style="padding: 0 52px 24px;max-width:220px;enable-background:new 0 0 1012.8 354;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
                   fill: #FFFFFF;
