[caffe.topmonks.cz] SVGs cleanup

--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -313,7 +313,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet" style="display: flex;flex-flow: column;">
           <a href="https://www.youtube.com/channel/UCYRTpQr7XJ4dCyo8vCRqp9Q/live">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 733.36536 340.15732">
+            <svg xmlns="http://www.w3.org/2000/svg" style="max-width: 324px" viewBox="0 0 733.36536 340.15732">
               <title>Youtube</title>
               <defs>
                 <clipPath id="A">
@@ -334,10 +334,8 @@
             </svg>
           </a>
           <a href="https://www.facebook.com/topmonks">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 1012.8 354" style="padding: 0 52px 24px;max-width:220px;enable-background:new 0 0 1012.8 354;" xml:space="preserve">
-              <style type="text/css">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1012.8 354" style="padding: 16px 52px 24px;max-width:220px;">
+              <style>
                 .st0 {
                   fill: #FFFFFF;
                 }
@@ -356,20 +354,17 @@
 			C288.9,338.5,353.6,265.3,353.6,177z"/>
                 </g>
               </g>
-</svg>
+            </svg>
           </a>
           <a href="https://twitch.tv/topmonks">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 8192 2500" style="padding: 24px 52px;max-width:220px;enable-background:new 0 0 8192 2500;" xml:space="preserve">
-<style type="text/css">
-  .st0 {
-    fill: #FFFFFF;
-  }
-</style>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8192 2500" style="padding: 24px 52px;max-width:220px;">
+              <style>
+                .st0 {
+                  fill: #FFFFFF;
+                }
+              </style>
               <title>Twitch</title>
-              <g>
-                <g id="Layer_1-2">
+                <g>
                   <polygon class="st0" points="596,840 595.8,319.1 0,319.1 0,1883 297.9,2180.9 1117,2181 1117,1585 596,1585 596,1436 1117,1436
 			1117,840 		"/>
                   <polygon class="st0" points="2755,840 2755,1585 2606,1585 2606,840 2011,840 2011,1585 1862,1585 1862,840 1266,840 1266,1883
@@ -383,8 +378,7 @@
                   <polygon class="st0" points="4841,840 4840.7,319.1 4245,319 4245,1883 4542.8,2180.9 5362,2180.9 5362,1585.1 4841,1585
 			4841,1436 5362,1436 5362,840 		"/>
                 </g>
-              </g>
-</svg>
+            </svg>
           </a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
