[caffe.topmonks.cz] Added event time

--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -309,7 +309,7 @@
     <div class="mdc-layout-grid next-caffe_box">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Živé vysílání</h2>
+          <h2>Živé vysílání - úterý 7. dubna 2020 od 19.00</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet" style="display: flex;flex-flow: column;">
           <a href="https://www.youtube.com/channel/UCYRTpQr7XJ4dCyo8vCRqp9Q/live">
