Blockchain Oprava avataru Josef-tetek

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -301,7 +301,7 @@
               <span class="published-date">NOVEMBER 14TH 2019</span>
               <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
               <div class="personal__id">
-                {{ avatar("photo of Josef Tětek", "avatar/josef-tet.jpg", 32) }}
+                {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
@@ -320,7 +320,7 @@
               <span class="published-date">NOVEMBER 11TH 2019</span>
               <h3>"AI is a Distraction" — Interview with Harry Halpin; CEO of NYM</h3>
               <div class="personal__id">
-                {{ avatar("photo of Josef Tětek", "avatar/josef-tet.jpg", 32) }}
+                {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
@@ -339,7 +339,7 @@
               <span class="published-date">NOVEMBER 7TH 2019</span>
               <h3>MakerDAO a DAI – úrok jako zlý sluha i špatný pán</h3>
               <div class="personal__id">
-                {{ avatar("photo of Josef Tětek", "avatar/josef-tet.jpg", 32) }}
+                {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
@@ -416,7 +416,7 @@
             </a>
           </div>
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Josef Tětek", "avatar/josef-tet.jpg", 92) }}
+            {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 92) }}
             <h3>Josef Tětek</h3>
             <p>Crypto Analyst</p>
 
