Blockchain Blog date

--- a/blockchain.topmonks.com/src/html/blog/index.njk
+++ b/blockchain.topmonks.com/src/html/blog/index.njk
@@ -1,5 +1,5 @@
 {%- from "macros/helpers.njk" import avatar, blogImg -%}
-{%- set articlesList = articles[2019 2020] | list -%}
+{%- set articlesList = articles[2020] | list -%}
 {%- set latestArticle = articlesList | last -%}
 <!DOCTYPE html>
 <html lang="en">
